--- a/ficha.ipynb
+++ b/ficha.ipynb
@@ -30,15 +30,419 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d2c97a28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>spotify_track_uri</th>\n",
+       "      <th>ts</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>ms_played</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>album_name</th>\n",
+       "      <th>reason_start</th>\n",
+       "      <th>reason_end</th>\n",
+       "      <th>shuffle</th>\n",
+       "      <th>skipped</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2J3n32GeLmMjwuAzyhcSNe</td>\n",
+       "      <td>2013-07-08 02:44:34</td>\n",
+       "      <td>web player</td>\n",
+       "      <td>3185</td>\n",
+       "      <td>Say It, Just Say It</td>\n",
+       "      <td>The Mowgli's</td>\n",
+       "      <td>Waiting For The Dawn</td>\n",
+       "      <td>autoplay</td>\n",
+       "      <td>clickrow</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1oHxIPqJyvAYHy0PVrDU98</td>\n",
+       "      <td>2013-07-08 02:45:37</td>\n",
+       "      <td>web player</td>\n",
+       "      <td>61865</td>\n",
+       "      <td>Drinking from the Bottle (feat. Tinie Tempah)</td>\n",
+       "      <td>Calvin Harris</td>\n",
+       "      <td>18 Months</td>\n",
+       "      <td>clickrow</td>\n",
+       "      <td>clickrow</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>487OPlneJNni3NWC8SYqhW</td>\n",
+       "      <td>2013-07-08 02:50:24</td>\n",
+       "      <td>web player</td>\n",
+       "      <td>285386</td>\n",
+       "      <td>Born To Die</td>\n",
+       "      <td>Lana Del Rey</td>\n",
+       "      <td>Born To Die - The Paradise Edition</td>\n",
+       "      <td>clickrow</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5IyblF777jLZj1vGHG2UD3</td>\n",
+       "      <td>2013-07-08 02:52:40</td>\n",
+       "      <td>web player</td>\n",
+       "      <td>134022</td>\n",
+       "      <td>Off To The Races</td>\n",
+       "      <td>Lana Del Rey</td>\n",
+       "      <td>Born To Die - The Paradise Edition</td>\n",
+       "      <td>trackdone</td>\n",
+       "      <td>clickrow</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0GgAAB0ZMllFhbNc3mAodO</td>\n",
+       "      <td>2013-07-08 03:17:52</td>\n",
+       "      <td>web player</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Half Mast</td>\n",
+       "      <td>Empire Of The Sun</td>\n",
+       "      <td>Walking On A Dream</td>\n",
+       "      <td>clickrow</td>\n",
+       "      <td>nextbtn</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        spotify_track_uri                   ts    platform  ms_played  \\\n",
+       "0  2J3n32GeLmMjwuAzyhcSNe  2013-07-08 02:44:34  web player       3185   \n",
+       "1  1oHxIPqJyvAYHy0PVrDU98  2013-07-08 02:45:37  web player      61865   \n",
+       "2  487OPlneJNni3NWC8SYqhW  2013-07-08 02:50:24  web player     285386   \n",
+       "3  5IyblF777jLZj1vGHG2UD3  2013-07-08 02:52:40  web player     134022   \n",
+       "4  0GgAAB0ZMllFhbNc3mAodO  2013-07-08 03:17:52  web player          0   \n",
+       "\n",
+       "                                      track_name        artist_name  \\\n",
+       "0                            Say It, Just Say It       The Mowgli's   \n",
+       "1  Drinking from the Bottle (feat. Tinie Tempah)      Calvin Harris   \n",
+       "2                                    Born To Die       Lana Del Rey   \n",
+       "3                               Off To The Races       Lana Del Rey   \n",
+       "4                                      Half Mast  Empire Of The Sun   \n",
+       "\n",
+       "                           album_name reason_start reason_end  shuffle  \\\n",
+       "0                Waiting For The Dawn     autoplay   clickrow    False   \n",
+       "1                           18 Months     clickrow   clickrow    False   \n",
+       "2  Born To Die - The Paradise Edition     clickrow    unknown    False   \n",
+       "3  Born To Die - The Paradise Edition    trackdone   clickrow    False   \n",
+       "4                  Walking On A Dream     clickrow    nextbtn    False   \n",
+       "\n",
+       "   skipped  \n",
+       "0    False  \n",
+       "1    False  \n",
+       "2    False  \n",
+       "3    False  \n",
+       "4    False  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 149860 entries, 0 to 149859\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column             Non-Null Count   Dtype \n",
+      "---  ------             --------------   ----- \n",
+      " 0   spotify_track_uri  149860 non-null  object\n",
+      " 1   ts                 149860 non-null  object\n",
+      " 2   platform           149860 non-null  object\n",
+      " 3   ms_played          149860 non-null  int64 \n",
+      " 4   track_name         149860 non-null  object\n",
+      " 5   artist_name        149860 non-null  object\n",
+      " 6   album_name         149860 non-null  object\n",
+      " 7   reason_start       149717 non-null  object\n",
+      " 8   reason_end         149743 non-null  object\n",
+      " 9   shuffle            149860 non-null  bool  \n",
+      " 10  skipped            149860 non-null  bool  \n",
+      "dtypes: bool(2), int64(1), object(8)\n",
+      "memory usage: 10.6+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>spotify_track_uri</th>\n",
+       "      <th>ts</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>ms_played</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>album_name</th>\n",
+       "      <th>reason_start</th>\n",
+       "      <th>reason_end</th>\n",
+       "      <th>shuffle</th>\n",
+       "      <th>skipped</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>149860</td>\n",
+       "      <td>149860</td>\n",
+       "      <td>149860</td>\n",
+       "      <td>1.498600e+05</td>\n",
+       "      <td>149860</td>\n",
+       "      <td>149860</td>\n",
+       "      <td>149860</td>\n",
+       "      <td>149717</td>\n",
+       "      <td>149743</td>\n",
+       "      <td>149860</td>\n",
+       "      <td>149860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>16527</td>\n",
+       "      <td>140422</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13839</td>\n",
+       "      <td>4113</td>\n",
+       "      <td>7948</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>1BLOVHYYlH4JUHQGcpt75R</td>\n",
+       "      <td>2018-09-30 21:43:18</td>\n",
+       "      <td>android</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ode To The Mets</td>\n",
+       "      <td>The Beatles</td>\n",
+       "      <td>The Beatles</td>\n",
+       "      <td>trackdone</td>\n",
+       "      <td>trackdone</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>207</td>\n",
+       "      <td>125</td>\n",
+       "      <td>139821</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>207</td>\n",
+       "      <td>13621</td>\n",
+       "      <td>2063</td>\n",
+       "      <td>76655</td>\n",
+       "      <td>77194</td>\n",
+       "      <td>111583</td>\n",
+       "      <td>141991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.283166e+05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.178401e+05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.795000e+03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.388400e+05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.185070e+05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.561125e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             spotify_track_uri                   ts platform     ms_played  \\\n",
+       "count                   149860               149860   149860  1.498600e+05   \n",
+       "unique                   16527               140422        6           NaN   \n",
+       "top     1BLOVHYYlH4JUHQGcpt75R  2018-09-30 21:43:18  android           NaN   \n",
+       "freq                       207                  125   139821           NaN   \n",
+       "mean                       NaN                  NaN      NaN  1.283166e+05   \n",
+       "std                        NaN                  NaN      NaN  1.178401e+05   \n",
+       "min                        NaN                  NaN      NaN  0.000000e+00   \n",
+       "25%                        NaN                  NaN      NaN  2.795000e+03   \n",
+       "50%                        NaN                  NaN      NaN  1.388400e+05   \n",
+       "75%                        NaN                  NaN      NaN  2.185070e+05   \n",
+       "max                        NaN                  NaN      NaN  1.561125e+06   \n",
+       "\n",
+       "             track_name  artist_name   album_name reason_start reason_end  \\\n",
+       "count            149860       149860       149860       149717     149743   \n",
+       "unique            13839         4113         7948           13         15   \n",
+       "top     Ode To The Mets  The Beatles  The Beatles    trackdone  trackdone   \n",
+       "freq                207        13621         2063        76655      77194   \n",
+       "mean                NaN          NaN          NaN          NaN        NaN   \n",
+       "std                 NaN          NaN          NaN          NaN        NaN   \n",
+       "min                 NaN          NaN          NaN          NaN        NaN   \n",
+       "25%                 NaN          NaN          NaN          NaN        NaN   \n",
+       "50%                 NaN          NaN          NaN          NaN        NaN   \n",
+       "75%                 NaN          NaN          NaN          NaN        NaN   \n",
+       "max                 NaN          NaN          NaN          NaN        NaN   \n",
+       "\n",
+       "       shuffle skipped  \n",
+       "count   149860  149860  \n",
+       "unique       2       2  \n",
+       "top       True   False  \n",
+       "freq    111583  141991  \n",
+       "mean       NaN     NaN  \n",
+       "std        NaN     NaN  \n",
+       "min        NaN     NaN  \n",
+       "25%        NaN     NaN  \n",
+       "50%        NaN     NaN  \n",
+       "75%        NaN     NaN  \n",
+       "max        NaN     NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Cargar el CSV (ajusta la ruta si lo tienes en otra carpeta)\n",
-    "df = pd.read_csv(\"screentime_analysis_extended.csv\")\n",
+    "df = pd.read_csv(\"spotify_history.csv\")\n",
     "\n",
     "# Vista rápida de las primeras filas\n",
     "display(df.head())\n",
@@ -309,8 +713,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
